[package]
name = "ramstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
libc = "0.2.147"
io-uring = {version = "0.6.1", features = ["direct-syscall", "io_safety"]}
log = "0.4.20"
env_logger = "0.10.0"
